# noteMakerPy

./: .gitignore  README.md  note  pyproject.toml  square
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yaml
note/: __init__.py  cli.py  database.py
note/function/: add.py  delete.py  export_markdown.py  list.py
src/note/: cli.py  database.py
src/note/function/: add.py  delete.py  export_markdown.py  list.py
