[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docker*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "note"
version = "1.0.0"
description = "Simple CLI notes app"
requires-python = ">=3.8"

[project.scripts]
note = "note.cli:main"